@@ -1,95 +1,175 @@
 package com.example.englishmaster_be.Exception;
 
-import com.example.englishmaster_be.Exception.Response.ApiResponse;
+import com.example.englishmaster_be.Exception.Response.BadRequestException;
 import com.example.englishmaster_be.Exception.Response.ResourceNotFoundException;
-import com.example.englishmaster_be.Exception.Response.ResponseUtil;
-import com.example.englishmaster_be.Model.ResponseModel;
-import jakarta.persistence.EntityNotFoundException;
-import jakarta.servlet.http.HttpServletRequest;
+import com.example.englishmaster_be.Model.Response.ExceptionResponseModel;
+import jakarta.mail.MessagingException;
+import lombok.AccessLevel;
+import lombok.experimental.FieldDefaults;
 import org.springframework.dao.DataIntegrityViolationException;
 import org.springframework.http.HttpStatus;
-import org.springframework.http.ResponseEntity;
 import org.springframework.security.access.AccessDeniedException;
+import org.springframework.security.authentication.BadCredentialsException;
+import org.springframework.security.core.AuthenticationException;
+import org.springframework.security.core.userdetails.UsernameNotFoundException;
 import org.springframework.validation.FieldError;
 import org.springframework.web.bind.MethodArgumentNotValidException;
-import org.springframework.web.bind.annotation.ControllerAdvice;
 import org.springframework.web.bind.annotation.ExceptionHandler;
 import org.springframework.web.bind.annotation.RestControllerAdvice;
 import org.springframework.web.client.HttpClientErrorException;
+import org.springframework.web.context.request.WebRequest;
 
+import java.rmi.ServerException;
 import java.util.List;
-import java.util.stream.Collectors;
 
 @RestControllerAdvice
+@FieldDefaults(level = AccessLevel.PRIVATE, makeFinal = true)
 public class GlobalExceptionHandler {
 
-    @ExceptionHandler(value = CustomException.class)
-    ResponseEntity<ResponseModel> handleCustomException(CustomException e) {
+
+    @ExceptionHandler(CustomException.class)
+    public ExceptionResponseModel handleCustomException(CustomException e) {
+
         Error error = e.getError();
-        ResponseModel responseModel = new ResponseModel();
-        responseModel.setStatus("fail");
-        responseModel.setMessage(error.getMessage());
-        responseModel.setViolations(error.getViolation());
-        responseModel.setResponseData(null);
-        return ResponseEntity.status(error.getStatusCode()).body(responseModel);
+
+        return ExceptionResponseModel.builder()
+                .success(false)
+                .status(error.getStatusCode())
+                .code(error.getStatusCode().value())
+                .message(error.getMessage())
+                .violations(error.getViolation())
+                .build();
     }
 
-    @ExceptionHandler(value = ResourceNotFoundException.class)
-    ApiResponse<Object> handlingResourceNotFoundException(ResourceNotFoundException exception, HttpServletRequest request){
-        return ResponseUtil.error(404, "Resource not found",exception.getMessage(),request.getRequestURI());
+
+    @ExceptionHandler(ResourceNotFoundException.class)
+    public ExceptionResponseModel handlingResourceNotFoundException(ResourceNotFoundException ignored){
+
+        String message = "Resource not found";
+
+        return ExceptionResponseModel.builder()
+                .success(false)
+                .status(HttpStatus.NOT_FOUND)
+                .code(HttpStatus.NOT_FOUND.value())
+                .message(message)
+                .violations("")
+                .build();
     }
-    @ExceptionHandler(value = MethodArgumentNotValidException.class)
-    ApiResponse<Object> handleValidationExceptions(MethodArgumentNotValidException exception,HttpServletRequest request){
+
+
+    @ExceptionHandler(MethodArgumentNotValidException.class)
+    public ExceptionResponseModel handleValidationExceptions(MethodArgumentNotValidException exception){
+
+        String message = "Validation failed";
 
         List<String> errors = exception.getBindingResult()
                 .getFieldErrors()
                 .stream()
                 .map(FieldError::getDefaultMessage)
-                .collect(Collectors.toList());
+                .toList();
 
-        return ResponseUtil.error(HttpStatus.BAD_REQUEST.value(),
-                "Validation failed", errors, request.getRequestURI());
+        return ExceptionResponseModel.builder()
+                .success(false)
+                .status(HttpStatus.BAD_REQUEST)
+                .code(HttpStatus.BAD_REQUEST.value())
+                .message(message)
+                .violations("")
+                .errors(errors)
+                .build();
     }
 
-    @ExceptionHandler(value = AccessDeniedException.class)
-    ResponseEntity<ResponseModel> handlingAccessDeniedException(AccessDeniedException exception) {
+    @ExceptionHandler({
+            UsernameNotFoundException.class,
+            BadCredentialsException.class
+    })
+    public ExceptionResponseModel handleBadCredentialsException(AuthenticationException ignored) {
+
+        String message = "Wrong username or password";
+
+        return ExceptionResponseModel.builder()
+                .success(false)
+                .status(HttpStatus.UNAUTHORIZED)
+                .code(HttpStatus.UNAUTHORIZED.value())
+                .message(message)
+                .violations("")
+                .build();
+    }
+
+
+    @ExceptionHandler(AccessDeniedException.class)
+    public ExceptionResponseModel handlingAccessDeniedException(AccessDeniedException ignored) {
+
         Error error = Error.UNAUTHORIZED;
-        ResponseModel responseModel = new ResponseModel();
-        responseModel.setStatus("fail");
-        responseModel.setMessage(error.getMessage());
-        responseModel.setViolations(error.getViolation());
-        responseModel.setResponseData(null);
-        return ResponseEntity.status(error.getStatusCode()).body(responseModel);
+
+        return ExceptionResponseModel.builder()
+                .success(false)
+                .status(error.getStatusCode())
+                .code(error.getStatusCode().value())
+                .message(error.getMessage())
+                .violations(error.getViolation())
+                .build();
     }
+
 
     @ExceptionHandler(HttpClientErrorException.class)
-    ResponseEntity<ResponseModel> handleHttpClientErrorException(HttpClientErrorException exception) {
-        ResponseModel responseModel = new ResponseModel();
-        responseModel.setStatus("fail");
-        responseModel.setMessage(exception.getMessage());
-        responseModel.setViolations(exception.getMessage());
-        responseModel.setResponseData(null);
-        return ResponseEntity.status(exception.getStatusCode()).body(responseModel);
+    public ExceptionResponseModel handleHttpClientErrorException(HttpClientErrorException ignored) {
+
+        Error error = Error.UPLOAD_FILE_FAILURE;
+
+        return ExceptionResponseModel.builder()
+                .success(false)
+                .status(error.getStatusCode())
+                .code(error.getStatusCode().value())
+                .message(error.getMessage())
+                .violations(error.getViolation())
+                .build();
     }
 
-    @ExceptionHandler(IllegalArgumentException.class)
-    ResponseEntity<ResponseModel> handleIllegalArgumentException(IllegalArgumentException exception) {
-        ResponseModel responseModel = new ResponseModel();
-        responseModel.setStatus("fail");
-        responseModel.setMessage(exception.getMessage());
-        responseModel.setViolations(exception.getMessage());
-        responseModel.setResponseData(null);
-        return ResponseEntity.status(HttpStatus.BAD_REQUEST).body(responseModel);
+
+    @ExceptionHandler({
+        MessagingException.class,
+        BadRequestException.class,
+        IllegalArgumentException.class
+    })
+    public ExceptionResponseModel handleIllegalArgumentException(Exception exception) {
+
+        return ExceptionResponseModel.builder()
+                .success(false)
+                .status(HttpStatus.BAD_REQUEST)
+                .code(HttpStatus.BAD_REQUEST.value())
+                .message(exception.getMessage())
+                .violations("")
+                .build();
     }
 
-    @ExceptionHandler(EntityNotFoundException.class)
-    ResponseEntity<ResponseModel> handleEntityNotFoundException(EntityNotFoundException e) {
-        ResponseModel responseModel = new ResponseModel();
-        responseModel.setStatus("fail");
-        responseModel.setMessage(e.getMessage());
-        responseModel.setViolations(e.getMessage());
-        responseModel.setResponseData(null);
-        return ResponseEntity.status(HttpStatus.NOT_FOUND).body(responseModel);
+    @ExceptionHandler(DataIntegrityViolationException.class)
+    public ExceptionResponseModel handleConflictException(Exception exception) {
+
+        return ExceptionResponseModel.builder()
+                .success(false)
+                .status(HttpStatus.CONFLICT)
+                .code(HttpStatus.CONFLICT.value())
+                .message(exception.getMessage())
+                .violations("")
+                .build();
     }
+
+
+    @ExceptionHandler({
+            Exception.class,
+            ServerException.class
+    })
+    public ExceptionResponseModel handleInternalException(Exception exception) {
+
+        return ExceptionResponseModel.builder()
+                .success(false)
+                .status(HttpStatus.INTERNAL_SERVER_ERROR)
+                .code(HttpStatus.INTERNAL_SERVER_ERROR.value())
+                .message(exception.getMessage())
+                .violations("")
+                .build();
+    }
+
+
 
 }
